--- a/source/assets/styles/main.scss
+++ b/source/assets/styles/main.scss
@@ -1272,7 +1272,7 @@ footer{
         flex-direction: row;
         // flex-wrap: wrap;
         align-items: self-start;
-        img{
+        picture{
             max-width: 20%;
         }
     }
